# skore

./: .commitlintrc.yml  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  AGENTS.md  CHANGELOG.rst  CONTRIBUTING.md  CONTRIBUTING.rst  LICENSE  Makefile  README.md  RELEASE_PROCESS.rst  TODO.md  Untitled.ipynb  cleanup.sh  codecov.yml  contributing.rst  datamander.ipynb  demo.ipynb  my_test.py  pixi.toml  pyproject.toml  reproduce_output.txt  reproduce_warning.py  requirements-doc.txt  requirements-test.txt  requirements-tools.txt  requirements.txt  setup.py  test.py  testspersp.ipynb  typos.toml
examples/energy_forecasting/: eda.py  modelling.ipynb  modelling.py  pyproject.toml
skore/: VERSION.txt  conftest.py  cv_report_test.py  matrix.json  pyproject.toml  requirements-test.txt  requirements-tools.txt  requirements.in  requirements.txt  sphinx-requirements.in  supported-versions.json  test-requirements.in
skore-hub-project/: pyproject.toml  supported-versions.json
skore-hub-project/hatch/: metadata.py
skore-hub-project/src/skore_hub_project/: __init__.py  json.py  protocol.py
skore-hub-project/src/skore_hub_project/artefact/: __init__.py  artefact.py  serializer.py  upload.py
skore-hub-project/src/skore_hub_project/artifact/: __init__.py  artifact.py  serializer.py  upload.py
skore-hub-project/src/skore_hub_project/authentication/: __init__.py  apikey.py  login.py  logout.py  token.py  uri.py
skore-hub-project/src/skore_hub_project/client/: __init__.py  api.py  client.py
skore-hub-project/src/skore_hub_project/item/: altair_chart_item.py  item.py  jsonable_item.py  matplotlib_figure_item.py  media_item.py  numpy_array_item.py  pandas_dataframe_item.py  pandas_series_item.py  pickle_item.py  polars_dataframe_item.py  skore_estimator_report_item.py  skrub_table_report_item.py
skore-hub-project/src/skore_hub_project/media/: __init__.py  data.py  estimator_html_repr.py  feature_importance.py  media.py  model.py  performance.py  table_report.py
skore-hub-project/src/skore_hub_project/metric/: __init__.py  accuracy.py  brier_score.py  log_loss.py  metric.py  precision.py  r2.py  recall.py  rmse.py  roc_auc.py  timing.py
skore-hub-project/src/skore_hub_project/payload/: __init__.py  base.py  cross_validation_report.py  estimator_report.py  report.py
skore-hub-project/src/skore_hub_project/project/: __init__.py  artefact.py  project.py
skore-hub-project/src/skore_hub_project/report/: __init__.py  cross_validation_report.py  estimator_report.py  report.py
skore-hub-project/tests/: conftest.py
skore-hub-project/tests/unit/: test_json.py  test_metric.py  test_protocol.py
skore-hub-project/tests/unit/artefact/: test_serializer.py  test_upload.py
skore-hub-project/tests/unit/artifact/: test_serializer.py
skore-hub-project/tests/unit/authentication/: test_login.py  test_logout.py  test_otp_server.py  test_token.py
skore-hub-project/tests/unit/client/: test_api.py  test_client.py
skore-hub-project/tests/unit/item/: test_altair_chart_item.py  test_init.py  test_item.py  test_jsonable_item.py  test_matplotlib_figure_item.py  test_media_item.py  test_numpy_array_item.py  test_pandas_dataframe_item.py  test_pandas_series_item.py  test_pickle_item.py  test_pillow_image_item.py  test_plotly_figure_item.py  test_polars_dataframe_item.py  test_polars_series_item.py  test_sklearn_base_estimator_item.py  test_skore_estimator_report_item.py  test_skrub_table_report_item.py
skore-hub-project/tests/unit/media/: test_data.py  test_feature_importance.py  test_model.py  test_performance.py
skore-hub-project/tests/unit/metric/: test_accuracy.py  test_brier_score.py  test_log_loss.py  test_metrics.py  test_precision.py  test_r2.py  test_recall.py  test_rmse.py  test_roc_auc.py
skore-hub-project/tests/unit/project/: test_artefact.py  test_project.py
skore-hub-project/tests/unit/report/: conftest.py  test_cross_validation_report.py  test_estimator_report.py
skore-local-project/: pyproject.toml  supported-versions.json
skore-local-project/hatch/: metadata.py
skore-local-project/src/skore_local_project/: __init__.py  metadata.py  project.py  storage.py
skore-local-project/tests/: conftest.py
skore-local-project/tests/unit/: test_delete_item.py  test_git_commit.py  test_project.py  test_storage.py
skore-remote-project/: pyproject.toml
skore-remote-project/hatch/: metadata.py
skore-remote-project/src/skore_remote_project/: __init__.py
skore-remote-project/src/skore_remote_project/authentication/: login.py  otp_server.py  token.py
skore-remote-project/src/skore_remote_project/client/: api.py  client.py
skore-remote-project/src/skore_remote_project/item/: __init__.py  altair_chart_item.py  item.py  jsonable_item.py  matplotlib_figure_item.py  media_item.py  numpy_array_item.py  pandas_dataframe_item.py  pandas_series_item.py  pickle_item.py  pillow_image_item.py  plotly_figure_item.py  polars_dataframe_item.py  polars_series_item.py  sklearn_base_estimator_item.py  skore_estimator_report_item.py  skrub_table_report_item.py
skore-remote-project/src/skore_remote_project/project/: metadata-0.py  metadata-1.py  metadata-2.py  metadata.py  project.py  widget.py
skore-remote-project/tests/: conftest.py
skore-remote-project/tests/unit/authentication/: test_login.py  test_token.py
skore/ci/: pip-compile.sh
skore/ci/requirements/: python-3.11-scikit-learn-1.6-test-requirements.txt  python-3.12-scikit-learn-1.4-test-requirements.txt  python-3.12-scikit-learn-1.5-test-requirements.txt
skore/hatch/: metadata.py
skore/src/skore/: __init__.py  __init__.pyi  __main__.py  _card.py  _cli.py  _config.py  _export.py  _login.py  cross_validate.py  dataset_utils.py  exceptions.py  project.py  scratch.py  train_test_split.py
skore/src/skore/cli/: cli.py  (+7 more)
skore/tests/: conftest.py  scratch.py  scratch_2.py
skore/tests/integration/: test_cross_validate.py
skore/tests/perf/: test_perf.py
skore/tests/unit/: conftest.py  test_at_import.py  test_config.py  test_cross_validate.py  test_init.py  test_login.py  test_project.py  test_train_test_split.py
(+1897 files in other folders)
