#:schema https://json.schemastore.org/pyproject.json

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mandr"
description = "..."
version = "0.1.0"
dependencies = [
  "altair",
  "diskcache",
  "pandas",
  "polars",
  "scikit-learn",
  "fastapi",
  "matplotlib",
  "pydantic",
  "pydantic_numpy",
  "uvicorn",
  "rich",
]

[project.optional-dependencies]
test = [
  "httpx",
  "jsonschema[format]",
  "pre-commit",
  "pytest",
  "pytest-cov",
  "pytest-randomly",
  "ruff",
]
tools = [
  "pip-tools",
]

doc = [
  "skrub",
  "sphinx",
  "sphinx-gallery",
  "pydata_sphinx_theme",
  "seaborn",
  "networkx",
  "statsmodels",
  "skrub",
  "inflect",
  "sentence-transformers",
  "tqdm",
  "pyarrow"  # for parquet files
]

[tool.hatch.build.targets.wheel]
packages = ["src/mandr"]

[tool.pytest.ini_options]
addopts = [
  "--doctest-modules",
  "--cov=src/",
  "--cov=tests/",
  "--cov-branch",
  "--import-mode=importlib",
  "--no-header",
  "--verbosity=2",
]

[tool.ruff]
src = ["mandr"]
exclude = [
  "doc"
]

[tool.ruff.lint]
select = [
  # pycodestyle
  "E",
  # Pyflakes
  "F",
  # pyupgrade
  "UP",
  # flake8-bugbear
  "B",
  # flake8-simplify
  "SIM",
  # flake8-print
  "T",
  # isort
  "I",
  # pydocstyle
  "D",
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D"]
"examples/*" = [
  "D",
  # It's fine not to put the import at the top of the file in the examples
  # folder.
  "E402",
  # Useless expressions are useful!
  "B018",
]

[tool.typos.default]
extend-ignore-re = [
  # Line ignore with trailing `# spellchecker:disable-line`
  "(?Rm)^.*(#|//)\\s*spellchecker:disable-line$",
  # Line block with `# spellchecker:<on|off>`
  "(?s)(#|//)\\s*spellchecker:off.*?\\n\\s*(#|//)\\s*spellchecker:on",
]

[tool.typos.files]
extend-exclude = [
  "*.min.js",
]

[tool.typos.default.extend-words]
# acronym for "False Positive Rate"
fpr = "fpr"
# typos considers pnd.NpNDArray as a typo and corrects it to pnd.NpANDArray
ND = "ND"
