[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "./VERSION.txt"
pattern = "(?P<version>[^']+)"

[tool.hatch.build.targets.sdist]
only-include = ["src/"]
artifacts = ["src/skore/ui/static/"]

[tool.hatch.build.targets.wheel]
package = ["src/skore/"]
artifacts = ["src/skore/ui/static/"]

[project]
name = "skore"
description = "..."
dynamic = ["version"]
dependencies = [
  "altair",
  "diskcache",
  "pandas",
  "polars",
  "scikit-learn",
  "fastapi",
  "matplotlib",
  "pydantic",
  "pydantic_numpy",
  "uvicorn",
  "rich",
  "skops",
]

[project.optional-dependencies]
test = [
  "httpx",
  "jsonschema[format]",
  "matplotlib",
  "pre-commit",
  "pytest",
  "pytest-cov",
  "pytest-order",
  "pytest-randomly",
  "ruff",
]
tools = [
  "pip-tools",
]

[tool.pytest.ini_options]
addopts = [
  "--doctest-modules",
  "--cov=src/",
  "--cov=tests/",
  "--cov-branch",
  "--import-mode=importlib",
  "--no-header",
  "--verbosity=2",
  # We ignore unwanted directories rather than including wanted ones, because
  # otherwise it becomes impossible to test only one file (the argument gets
  # appended to the defaults)
  "--ignore=doc",
  "--ignore=examples",
  "--ignore=notebooks",
]

[tool.ruff]
src = ["skore"]
exclude = [
  "doc"
]

[tool.ruff.lint]
select = [
  # pycodestyle
  "E",
  # Pyflakes
  "F",
  # pyupgrade
  "UP",
  # flake8-bugbear
  "B",
  # flake8-simplify
  "SIM",
  # flake8-print
  "T",
  # isort
  "I",
  # pydocstyle
  "D",
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D"]
"examples/*" = [
  "D",
  # It's fine not to put the import at the top of the file in the examples
  # folder.
  "E402",
  # Useless expressions are useful!
  "B018",
]

[tool.typos.default]
extend-ignore-re = [
  # Line ignore with trailing `# spellchecker:disable-line`
  "(?Rm)^.*(#|//)\\s*spellchecker:disable-line$",
  # Line block with `# spellchecker:<on|off>`
  "(?s)(#|//)\\s*spellchecker:off.*?\\n\\s*(#|//)\\s*spellchecker:on",
]

[tool.typos.files]
extend-exclude = [
  "*.min.js",
]

[tool.typos.default.extend-words]
# acronym for "False Positive Rate"
fpr = "fpr"
# typos considers pnd.NpNDArray as a typo and corrects it to pnd.NpANDArray
ND = "ND"
