[project]
name = "skore-hub-project"
dynamic = ["license-files", "readme", "version"]
requires-python = ">=3.10"
maintainers = [{ name = "skore developers", email = "skore@signal.probabl.ai" }]
license = "MIT"
dependencies = [
  "blake3",
  "httpx",
  "joblib",
  "matplotlib",
  "numpy",
  "orjson",
  "pydantic",
  "rich",
  "scikit-learn",
]

[project.optional-dependencies]
test = [
  "pre-commit",
  "pytest",
  "pytest-cov",
  "pytest-order",
  "pytest-randomly",
  "pytest-xdist",
  "respx",
  "skore>=0.10.3",
  "xdoctest",
]

[project.scripts]
skore-hub-login = "skore_hub_project.authentication.login:login"
skore-hub-logout = "skore_hub_project.authentication.logout:logout"

[project.entry-points."skore.plugins.project"]
hub = "skore_hub_project:Project"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata.hooks.custom]
path = "hatch/metadata.py"
version-default = "0.0.0+unknown"
license = { "file" = "../LICENSE" }
readme = { "file" = "../README.md" }

[tool.hatch.build.targets.sdist]
only-include = ["src/", "hatch/"]

[tool.hatch.build.targets.wheel]
package = ["src/skore_hub_project/"]

[tool.pytest.ini_options]
addopts = [
  "-ra",
  "--strict-markers",
  "--strict-config",
  "--xdoctest",
  "--import-mode=importlib",
  "--no-header",
  "--verbosity=2",
  "--dist=loadscope",
]
xfail_strict = true
filterwarnings = ["error"]
log_cli_level = "info"

[tool.coverage.run]
branch = true
source = ["skore_hub_project"]
concurrency = ["thread", "multiprocessing"]
parallel = true

[tool.coverage.report]
omit = ["src/*", "tests/*"]
show_missing = true
exclude_also = [
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.ruff.lint]
select = [
    "B",
    "C4",
    "T10",
    "T20",
    "PYI055", "PYI059",
    "PT003", "PT014",
    "SIM",
    "I",
    "PERF",
    "E",
    "D",
    "F",
    "UP",
    "RUF010", "RUF015",
]
ignore = ["PERF203"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D"]

[tool.mypy]
exclude = ["hatch/", "tests/"]

[[tool.mypy.overrides]]
follow_untyped_imports = true
module = ["skore.*"]

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = [
  "joblib.*",
  "sklearn.*",
]
