[project]
name = "skore-hub-project"
dynamic = ["license-files", "readme", "version"]
requires-python = ">=3.10"
maintainers = [{ name = "skore developers", email = "skore@signal.probabl.ai" }]
license = "MIT"
dependencies = [
  "blake3",
  "httpx",
  "joblib",
  "matplotlib",
  "numpy",
  "orjson",
  "pydantic",
  "rich>=14.2.0",
  "scikit-learn",
  "scipy",
]

[project.optional-dependencies]
test = [
  "pandas-stubs",
  "pre-commit",
  "pytest-cov",
  "pytest-order",
  "pytest-randomly",
  "pytest-xdist",
  "pytest",
  "respx",
  "skore>=0.12",
  "xdoctest",
]

[project.entry-points."skore.plugins.login"]
hub = "skore_hub_project.authentication.login:login"

[project.entry-points."skore.plugins.project"]
hub = "skore_hub_project.project.project:Project"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata.hooks.custom]
path = "hatch/metadata.py"
version-default = "0.0.0+unknown"
license = { "file" = "../LICENSE" }
readme = { "file" = "../README.md" }

[tool.hatch.build.targets.sdist]
only-include = ["src/", "hatch/"]

[tool.hatch.build.targets.wheel]
package = ["src/skore_hub_project/"]

[tool.pytest.ini_options]
addopts = [
  "-ra",
  "--strict-markers",
  "--strict-config",
  "--xdoctest",
  "--import-mode=importlib",
  "--no-header",
  "--verbosity=2",
  "--dist=loadscope",
  "--durations=25",
]
xfail_strict = true
filterwarnings = ["error"]
log_cli_level = "info"

[tool.coverage.run]
branch = true
source = ["skore_hub_project"]
concurrency = ["thread", "multiprocessing"]
parallel = true

[tool.coverage.report]
omit = ["src/*", "tests/*"]
show_missing = true
exclude_also = [
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.ruff.lint]
select = [
    "B",
    "C4",
    "T10",
    "T20",
    "PYI055", "PYI059",
    "PT003", "PT014",
    "SIM",
    "I",
    "PERF",
    "E",
    "D",
    "F",
    "UP",
    "RUF010", "RUF015",
]
ignore = ["PERF203"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D"]

[tool.ty.src]
exclude = ["hatch/**", "tests/**"]
