[project]
name = "skore-remote-project"
dynamic = ["license", "readme", "version"]
requires-python = ">=3.9, <3.13"
maintainers = [{ name = "skore developers", email = "skore@signal.probabl.ai" }]
dependencies = []

[project.optional-dependencies]
test = [
  "pre-commit",
  "pytest",
  "pytest-cov",
  "pytest-order",
  "pytest-randomly",
  "pytest-xdist",
  "xdoctest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata.hooks.custom]
path = "hatch/metadata.py"
version-default = "0.0.0+unknown"
license = { "file" = "../LICENSE" }
readme = { "file" = "../README.md" }

[tool.hatch.build.targets.sdist]
only-include = ["src/", "hatch/"]

[tool.hatch.build.targets.wheel]
package = ["src/skore_remote_project/"]
