[project]
name = "skore"
description = """\
Track Your Data Science. \
Skore's open-source Python library accelerates ML model development with automated evaluation reports, \
smart methodological guidance, and comprehensive cross-validation analysis.\
"""
dynamic = ["license-files", "readme", "version"]
requires-python = ">=3.10"
maintainers = [{ name = "skore developers", email = "skore@signal.probabl.ai" }]
license = "MIT"
classifiers = [
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "Programming Language :: Python",
  "Topic :: Software Development",
  "Topic :: Scientific/Engineering",
  "Development Status :: 3 - Alpha",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX",
  "Operating System :: Unix",
  "Operating System :: MacOS",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "joblib",
  "matplotlib",
  "numpy",
  "pandas",
  "plotly",
  "rich>=14.2",
  "scikit-learn",
  "skore[local]",
  "skrub",
  "seaborn",
  "jinja2",
]

[project.optional-dependencies]
jupyter = [
  "IPython",
  "anywidget",
  "ipywidgets",
]
test-base = [
  "pre-commit",
  "pytest",
  "pytest-cov",
  "pytest-order",
  "pytest-randomly",
  "pytest-xdist",
  "scipy-stubs",
  "xdoctest",
  "jedi",
]
test = ["skore[test-base]", "skore[jupyter]", "polars", "pyarrow"]
test-lts-cpu = ["skore[test-base]", "polars-lts-cpu"]
sphinx-base = [
  "altair",
  "kaleido",
  "numpydoc",
  "plotly>=6,<7", # plotly <6 conflicting with kaleido
  "pydata-sphinx-theme",
  "seaborn",
  "skrub",
  "sphinx-copybutton",
  "sphinx-design",
  "sphinx-gallery",
  "sphinx-tabs",
  "sphinx<8.2.0",
  "sphinx_autosummary_accessors",
  "xgboost-cpu",
]
sphinx = ["skore[sphinx-base]", "polars"]
sphinx-lts-cpu = ["skore[sphinx-base]", "polars-lts-cpu"]
dev = [
  "nbformat",
  "ipykernel",
]
local = ["skore-local-project>=0.0.4"]
hub = ["skore-hub-project>=0.0.17"]

[project.urls]
Homepage = "https://probabl.ai"
Repository = "https://github.com/probabl-ai/skore"
Download = "https://pypi.org/project/skore/#files"
Issues = "https://github.com/probabl-ai/skore/issues"
"Release notes" = "https://github.com/probabl-ai/skore/releases"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata.hooks.custom]
path = "hatch/metadata.py"
version-default = "0.0.0+unknown"
license = { "file" = "../LICENSE" }
readme = { "file" = "../README.md" }

[tool.hatch.build.targets.sdist]
only-include = ["src/", "hatch/"]

[tool.hatch.build.targets.wheel]
package = ["src/skore/"]

[tool.pytest.ini_options]
addopts = [
  "-ra",
  "--strict-markers",
  "--strict-config",
  "--xdoctest",
  "--import-mode=importlib",
  "--no-header",
  "--verbosity=2",
  "--dist=loadscope",
  "--durations=25",
]
xfail_strict = true
log_cli_level = "info"

[tool.coverage.run]
branch = true
source = ["skore"]
concurrency = ["thread", "multiprocessing"]
parallel = true

[tool.coverage.report]
omit = ["*/_externals/*", "src/*", "tests/*"]
show_missing = true
exclude_also = [
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.ruff.lint]
select = [
    "B",
    "C4",
    "T10",
    "T20",
    "PYI055", "PYI059",
    "PT003", "PT014",
    "SIM",
    "I",
    "PERF",
    "E",
    "D",
    "F",
    "UP",
    "RUF010", "RUF015",
]
ignore = ["PERF203"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D"]

[tool.ty]

[tool.ty.environment]
python-version = "3.10"  # match requires-python floor

[tool.ty.rules]
# --- Baseline suppressions for pre-existing issues ---
# These suppress diagnostics that existed before the mypy→ty migration.
# Address them incrementally in follow-up PRs.
#
# sklearn/skrub compat layers use version-guarded imports that ty cannot resolve
unresolved-import = "ignore"
# sklearn compat calls use kwargs from older API signatures
unknown-argument = "ignore"
# pandas/numpy overloads + sklearn compat dynamic types
invalid-argument-type = "ignore"
# sklearn compat validate_params missing kwarg
missing-argument = "ignore"
# pd.concat / np.concatenate with dynamic list types
no-matching-overload = "ignore"
# skrub monkey-patching, plotly widgets, sklearn .classes_ on BaseEstimator, abstract methods
unresolved-attribute = "ignore"
# type narrowing edge cases, monkey-patching assignments
invalid-assignment = "ignore"
# table_report / feature_names return type mismatches
invalid-return-type = "ignore"
# hasattr-guarded calls on dynamic objects
call-non-callable = "ignore"
# pre-existing cast() calls
redundant-cast = "ignore"
# importlib.metadata lazy submodule
possibly-missing-attribute = "ignore"
