[project]
name = "skore"
description = """\
Track Your Data Science. \
Skore's open-source Python library accelerates ML model development with automated evaluation reports, \
smart methodological guidance, and comprehensive cross-validation analysis.\
"""
dynamic = ["license-files", "readme", "version"]
requires-python = ">=3.11"
maintainers = [{ name = "skore developers", email = "skore@signal.probabl.ai" }]
license = "MIT"
classifiers = [
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "Programming Language :: Python",
  "Topic :: Software Development",
  "Topic :: Scientific/Engineering",
  "Development Status :: 3 - Alpha",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX",
  "Operating System :: Unix",
  "Operating System :: MacOS",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "jinja2",
  "joblib",
  "matplotlib",
  "narwhals>=2.0.1",
  "numpy",
  "pandas",
  "plotly",
  "rich>=14.2",
  "scikit-learn",
  "seaborn",
  "skore[local]",
  "skrub>=0.9",
]

[project.optional-dependencies]
jupyter = [
  "IPython",
]
test-base = [
  "build",
  "jedi",
  "mypy",
  "pre-commit",
  "pytest",
  "pytest-cov",
  "pytest-order",
  "pytest-randomly",
  "pytest-xdist",
  "respx",
  "scipy-stubs",
  "skore[hub, jupyter, mlflow]",
  "xdoctest",
]
test = ["polars", "pyarrow", "skore[test-base]"]
test-lts-cpu = ["polars-lts-cpu", "skore[test-base]"]
sphinx-base = [
  "altair",
  "kaleido",
  "numpydoc",
  "plotly>=6,<7", # plotly <6 conflicting with kaleido
  "pydata-sphinx-theme",
  "seaborn",
  "skrub",
  "sphinx-copybutton",
  "sphinx-design",
  "sphinx-gallery",
  "sphinx-issues",
  "sphinx-tabs",
  "sphinx<8.2.0",
  "sphinx_autosummary_accessors",
  "xgboost ; platform_system == 'Darwin'",
  "xgboost-cpu ; platform_system != 'Darwin'",
]
sphinx = ["mlflow", "polars", "skore[sphinx-base, hub, mlflow]"]
sphinx-lts-cpu = ["mlflow", "polars-lts-cpu", "skore[sphinx-base, hub, mlflow]"]
dev = ["ipykernel", "nbformat"]
hub = [
  "httpx",
  "orjson",
  "pydantic",
  "rich[jupyter]>=14.2",
  "scipy",
]
mlflow = ["mlflow>=2.20.4"]

[project.entry-points."skore.plugins.login"]
hub = "skore._plugins.hub.authentication.login:login"

[project.entry-points."skore.plugins.project"]
local = "skore._plugins.local:Project"
hub = "skore._plugins.hub.project.project:Project"
mlflow = "skore._plugins.mlflow:Project"

[project.scripts]
skore-init-workspace = "skore._plugins.local.project:init_workspace"
skore = "skore._cli:main"

[project.urls]
Homepage = "https://probabl.ai"
Repository = "https://github.com/probabl-ai/skore"
Download = "https://pypi.org/project/skore/#files"
Issues = "https://github.com/probabl-ai/skore/issues"
"Release notes" = "https://github.com/probabl-ai/skore/releases"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata.hooks.custom]
path = "hatch/metadata.py"
version-default = "0.0.0+unknown"
license = { "file" = "../LICENSE" }
readme = { "file" = "../README.md" }

[tool.hatch.build.targets.sdist]
only-include = ["src/", "hatch/"]

[tool.hatch.build.targets.wheel]
package = ["src/skore/"]

[tool.pytest.ini_options]
addopts = [
  "-ra",
  "--strict-markers",
  "--strict-config",
  "--xdoctest",
  "--import-mode=importlib",
  "--no-header",
  "--verbosity=2",
  "--dist=loadscope",
  "--durations=25",
]
xfail_strict = true
log_cli_level = "info"
filterwarnings = [
  'ignore:codecs\.open\(\) is deprecated.*:DeprecationWarning:mlflow',
]

[tool.coverage.run]
branch = true
source = ["skore"]
concurrency = ["thread", "multiprocessing"]
parallel = true

[tool.coverage.report]
omit = ["*/_externals/*", "src/*", "tests/*"]
show_missing = true
exclude_also = [
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.ruff.lint]
select = [
    "B",
    "C4",
    "T10",
    "T20",
    "PYI055", "PYI059",
    "PT003", "PT014",
    "SIM",
    "I",
    "PERF",
    "E",
    "D",
    "F",
    "UP",
    "RUF010", "RUF015",
]
ignore = ["PERF203"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D"]

[tool.mypy]
exclude = ["src/skore/_externals/", "hatch/", "tests/"]
# strict = false
warn_unused_configs = true
warn_redundant_casts = true

[[tool.mypy.overrides]]
module = ["skore._plugins.*"]
#
# strict = true is incompatible with per-module configuration
# https://github.com/python/mypy/issues/11401
# https://mypy.readthedocs.io/en/stable/existing_code.html#introduce-stricter-options
#
# The following config is equivalent to `strict = true`:
#
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
extra_checks = true
no_implicit_reexport = true
strict_equality = true
warn_return_any = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = [
  "jinja2.*",
  "joblib.*",
  "js.*",
  "mlflow.*",
  "narwhals.*",
  "pandas.*",
  "plotly.*",
  "pyodide.*",
  "seaborn.*",
  "sklearn.*",
  "skrub.*",
]
