[project]
name = "challenge-data-cnr"
version = "0.1.0"
description = "Example notebook for the CNR data science challenge"
authors = [
    { name = "Auguste Baum", email = "auguste@probabl.ai" }
]
dependencies = [
    "altair>=5.3.0",
    "ipykernel>=6.29.5",
    "polars>=1.1.0",
    "pyarrow>=16.1.0",
    "sktime>=0.31.0",
    "vegafusion[embed]>=1.6.9",
]
readme = "README.md"
requires-python = ">= 3.8"

[tool.rye]
managed = true
virtual = true
dev-dependencies = []
